--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">RetrofitDemo</string>
     <string name="design">设计模式</string>
+    <string name="thread">线程池</string>
     <string name="resonse">Resonse:</string>
 </resources>
