--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
     <string name="app_name">RetrofitDemo</string>
     <string name="design">设计模式</string>
     <string name="thread">线程池</string>
+    <string name="navigation">Navigation</string>
     <string name="resonse">Resonse:</string>
+
+    <string name="fragment_main">fragment Main</string>
+    <string name="fragment_a">fragment A</string>
+
 </resources>
