--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,14 @@
     <string name="thread">线程池</string>
     <string name="navigation">Navigation</string>
     <string name="player">播放器</string>
+    <string name="lifecycle">LifeCycle</string>
     <string name="response">Response:</string>
 
     <string name="fragment_main">fragment Main</string>
     <string name="fragment_a">fragment A</string>
     <string name="set_play_media">设置播放数据</string>
+    <string name="lifecyclefragment">lifecycleFragment</string>
+    <string name="livedata">LiveData</string>
+    <string name="MediatorLiveData" >MediatorLiveData</string>
 
 </resources>
